manifests/pacman-deployment.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      alpha.image.policy.openshift.io/resolve-names: '*'
      app.openshift.io/route-disabled: "false"
      deployment.kubernetes.io/revision: "1"
    generation: 1
    labels:
      app: pacman-app
      app.kubernetes.io/component: pacman-app
      app.kubernetes.io/instance: pacman-app
      app.kubernetes.io/name: pacman-app
      app.kubernetes.io/part-of: pacman-app
      app.openshift.io/runtime: nodejs
      app.openshift.io/runtime-namespace: pacman
    name: pacman-app
    namespace: pacman
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: pacman-app
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: pacman-app
          deployment: pacman-app
      spec:
        containers:
        - image: quay.io/ifont/pacman-nodejs-app:latest 
          imagePullPolicy: Always
          name: pacman-app
          ports:
          - containerPort: 8080
            protocol: TCP
