manifests/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-app
  namespace: pacman
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pacman-app
    deployment: pacman-app
