manifests/pacman-route.yaml
apiVersion: v1
kind: List
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: pacman-app
    namespace: pacman
  spec:
    host: pacman.apps.rtfm.servebeer.com
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: pacman-app
      weight: 100
    wildcardPolicy: None
